<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preferences_general"
        app:icon="@android:drawable/ic_menu_preferences">

        <ListPreference
            app:key="language"
            app:title="@string/language_selection"
            app:icon="@android:drawable/ic_menu_sort_by_size"
            app:defaultValue="en"
            app:entries="@array/language_names"
            app:entryValues="@array/language_codes"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preferences_account"
        app:icon="@android:drawable/ic_menu_manage">

        <Preference
            app:key="logout"
            app:title="@string/logout"
            app:icon="@android:drawable/ic_lock_power_off" />

    </PreferenceCategory>

</PreferenceScreen> 